# neuromeka-il

./: .gitignore  README.md  environment.yaml  environment_train.yaml  imitate.py  make_fake_data.sh  preprocess.py
config/: configuration_base.py
config/example/: act_relative_delta_wo_gripper.yaml  act_wo_gripper.yaml  dual_robot_gripper_relative_delta.yaml  dual_robot_gripper_task.yaml
dataset/: imitation_dataset.py
deploy/: MimicServer.py  README.md  calibrate_vive.py  collect_data.py  fsm_demo.py  nn_policy_unit_test.py  task_demo.py
deploy/communication/: gripper.py  robot.py
deploy/config/: env.py  model.py  robot.py
deploy/conty/: RunMimicServer.ipynb  mimic_servicer.py  run_mimic_servicer.ipynb
deploy/data_collector/: collector.py  config.py
deploy/helper/: config_utils.py  controller_utils.py  extra_utils.py  math_utils.py  remote_utils.py
deploy/imitation_learning/: controller.py  model.py
deploy/perception/: realsense.py
deploy/perception_module/: realsense.py
helper/: generate_synthetic_data.py  utils.py
policies/: normalize.py  utils.py
policies/ACT/: modeling_act.py
train/: .gitignore  README.md  imitate.py  preprocess.py
train/nrmk_il/: pyproject.toml
train/nrmk_il/src/nrmk_il/: __init__.py
train/nrmk_il/src/nrmk_il/config/: configuration_base.py
train/nrmk_il/src/nrmk_il/dataset/: imitation_dataset.py
train/nrmk_il/src/nrmk_il/helper/: remote_utils.py  utils.py
train/nrmk_il/src/nrmk_il/policies/: __init__.py  selection.py
train/nrmk_il/src/nrmk_il/policies/ACT/: configuration_act.py  modeling_act.py
(+49 files in other folders)
