[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrmk_il"
version = "1.0.0"
description = "Neuromeka imitation learning framework"
license = "BSD-3-Clause"
authors = [
  { name = "Yunho Kim", email = "yunho.kim@neuromeka.com" },
  { name = "Quan Nguyen", email = "quan.nguyen@neuromeka.com" },
  { name = "Joonho Lee", email = "joonho.lee@neuromeka.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nrmk_il*"]